[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/GDEditor/Resources/Icons/Remove.png" type="Texture" id=1]
[ext_resource path="res://addons/GDEditor/Scenes/CharacterItem.gd" type="Script" id=2]
[ext_resource path="res://addons/GDEditor/Resources/Icons/Edit.png" type="Texture" id=3]
[ext_resource path="res://addons/GDEditor/Resources/Icons/icon.png" type="Texture" id=4]
[ext_resource path="res://addons/GDEditor/Scenes/ContextStateTree.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/GDEditor/Scenes/CharacterEditDialog.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.125, 0.14375, 0.19375, 1 )
border_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[node name="CharacterItem" type="PanelContainer"]
margin_right = 340.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 64 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 333.0
margin_bottom = 71.0
custom_constants/separation = 30

[node name="CharacterProfileTextRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ProfileFileDialog" type="FileDialog" parent="HBoxContainer/CharacterProfileTextRect"]
margin_right = 326.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 400 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.png;" )

[node name="CharacterNameLabel" type="Label" parent="HBoxContainer"]
margin_left = 94.0
margin_right = 268.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Scr1pti3"
valign = 1
autowrap = true
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 298.0
margin_right = 326.0
margin_bottom = 64.0
alignment = 1

[node name="EditBtn" type="ToolButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 28.0
margin_bottom = 30.0
toggle_mode = true
icon = ExtResource( 3 )

[node name="CharacterEditDialog" type="WindowDialog" parent="HBoxContainer/VBoxContainer/EditBtn"]
visible = true
margin_left = 50.0
margin_top = -32.0
margin_right = 755.0
margin_bottom = 584.0
mouse_filter = 2
popup_exclusive = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_lock_": true
}

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 695.0
margin_bottom = 606.0

[node name="CharacterStateTree" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer" instance=ExtResource( 5 )]
StateColumnTitle = "Character States"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer"]
margin_left = 212.0
margin_right = 685.0
margin_bottom = 596.0
custom_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer"]
margin_right = 473.0
margin_bottom = 144.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="NameEditLabel" type="Label" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Name"

[node name="NameEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_left = 94.0
margin_right = 473.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Scr1pti3"
placeholder_text = "Character Name"

[node name="DescriptionEditLabel" type="Label" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_top = 87.0
margin_right = 74.0
margin_bottom = 101.0
hint_tooltip = "Your character descripton is just a meta information. Use it to describe your character accordingly."
mouse_filter = 1
text = "Description"

[node name="DescriptionEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_left = 94.0
margin_top = 44.0
margin_right = 473.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="BtnContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 473.0
margin_bottom = 184.0
custom_constants/separation = 10

[node name="AddExpressionBtn" type="Button" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/BtnContainer"]
margin_right = 110.0
margin_bottom = 20.0
text = "Add Expression"

[node name="DeleteExpressionBtn" type="Button" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/BtnContainer"]
margin_left = 120.0
margin_right = 248.0
margin_bottom = 20.0
text = "Delete Expression"

[node name="CharacterExpressionScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 473.0
margin_bottom = 596.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="CharacterExpressionContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/CharacterExpressionScrollContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 463.0
margin_bottom = 382.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/vseparation = 15
custom_constants/hseparation = 10
columns = 3

[node name="FileDialog" type="FileDialog" parent="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog"]
margin_left = -218.0
margin_top = 131.0
margin_right = 97.0
margin_bottom = 460.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.png;" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteBtn" type="ToolButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 28.0
margin_bottom = 58.0
icon = ExtResource( 1 )

[connection signal="gui_input" from="HBoxContainer/CharacterProfileTextRect" to="." method="_on_CharacterProfileTextRect_gui_input"]
[connection signal="file_selected" from="HBoxContainer/CharacterProfileTextRect/ProfileFileDialog" to="." method="_on_ProfileFileDialog_file_selected"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/EditBtn" to="." method="_on_EditBtn_toggled"]
[connection signal="about_to_show" from="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog" to="." method="_on_CharacterEditDialog_about_to_show"]
[connection signal="about_to_show" from="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog" to="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog" method="_on_about_to_show"]
[connection signal="popup_hide" from="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog" to="." method="_on_CharacterEditDialog_popup_hide"]
[connection signal="state_changed" from="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/CharacterStateTree" to="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog" method="_on_CharacterStateTree_state_changed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/GridContainer/DescriptionEdit" to="." method="_on_DescriptionEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/BtnContainer/AddExpressionBtn" to="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog" method="_on_AddExpressionBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/MarginContainer/HSplitContainer/VBoxContainer/BtnContainer/DeleteExpressionBtn" to="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog" method="_on_DeleteExpressionBtn_pressed"]
[connection signal="file_selected" from="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog/FileDialog" to="HBoxContainer/VBoxContainer/EditBtn/CharacterEditDialog" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/DeleteBtn" to="." method="_on_DeleteBtn_pressed"]
